--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port=3000",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -13,9 +13,13 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
+    "recharts": "^2.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
